--- a/GYM/Dockerfile
+++ b/GYM/Dockerfile
@@ -1,12 +1,12 @@
-# Step 1: Build
-FROM eclipse-temurin:17-jdk AS build
+# Step 1: Build with Java 23
+FROM eclipse-temurin:23-jdk AS build
 WORKDIR /app
 COPY . .
 RUN chmod +x mvnw
 RUN ./mvnw clean package -DskipTests
 
-# Step 2: Run
-FROM eclipse-temurin:17-jre
+# Step 2: Run with Java 23 JRE
+FROM eclipse-temurin:23-jre
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
