--- a/GYM/src/main/resources/application.properties
+++ b/GYM/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 spring.application.name=GYM
 
-#DB configuration
- spring.datasource.url=${postgresql://gym_db_nhr5_user:NXnCSeaw6bqZIVunCHwNZBdXZJsGlAor@dpg-d46c9oili9vc73deoi9g-a.oregon-postgres.render.com/gym_db_nhr5}
+# ✅ Render sets this automatically
+server.port=${PORT:8080}
+
+# ✅ Database connection (Render injects values)
+spring.datasource.url=${ postgresql://gym_db_nhr5_user:NXnCSeaw6bqZIVunCHwNZBdXZJsGlAor@dpg-d46c9oili9vc73deoi9g-a.oregon-postgres.render.com/gym_db_nhr5}
 spring.datasource.username=${gym_db_nhr5_user}
 spring.datasource.password=${NXnCSeaw6bqZIVunCHwNZBdXZJsGlAor}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-
+# ✅ Hibernate / JPA configs
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.driver-class-name=org.postgresql.Driver
-# spring.jpa.properties.hibernate.format_sql=true
 
-# For file uploads
+# ✅ Multipart / file uploads (temporary until Cloudinary)
 file.upload-dir=uploads/
-
-#  File upload settings
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
