--- a/GYM/src/main/resources/application.properties
+++ b/GYM/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ✅ Hibernate / JPA configs
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.flyway.enabled=false
+
 
 # ✅ Multipart / file uploads (temporary until Cloudinary)
 file.upload-dir=uploads/
