--- a/GYM/src/main/resources/application.properties
+++ b/GYM/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=GYM
 
 # ✅ Render sets this automatically
-server.port=${PORT:8080}
+server.port=PORT:8080
 
 # ✅ Database connection (Render injects values)
-spring.datasource.url=${ postgresql://gym_db_nhr5_user:NXnCSeaw6bqZIVunCHwNZBdXZJsGlAor@dpg-d46c9oili9vc73deoi9g-a.oregon-postgres.render.com/gym_db_nhr5}
-spring.datasource.username=${gym_db_nhr5_user}
-spring.datasource.password=${NXnCSeaw6bqZIVunCHwNZBdXZJsGlAor}
+spring.datasource.url=jdbc:postgresql://dpg-d46c9oili9vc73deoi9g-a.oregon-postgres.render.com:5432/gym_db_nhr5
+
+spring.datasource.username=gym_db_nhr5_user
+spring.datasource.password=NXnCSeaw6bqZIVunCHwNZBdXZJsGlAor
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ✅ Hibernate / JPA configs
