--- a/GYM/src/main/resources/application.properties
+++ b/GYM/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=GYM
 
 # ✅ Render sets this automatically
-server.port=PORT:8080
+server.port=${PORT:8080}
 
 # ✅ Database connection (Render injects values)
 spring.datasource.url=jdbc:postgresql://dpg-d46c9oili9vc73deoi9g-a.oregon-postgres.render.com:5432/gym_db_nhr5
